# zertana

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
zertana/: __init__.py  checks.py  cli.py  disk.py  hypervisor.py  wizard.py
